# kiosk-system

./: .gitignore  CMakeLists.txt  Dockerfile  Movieticketcounter.cpp  README.md  bookings.h  card.cc  card.h  conanfile.py  conanfile.txt  registration.txt  ticket.cc
.docker/: docker-compose.yml
.github/workflows/: cmake-multi-platform.yml  publish-protos.yml
api/proto/: kiosk.proto
proto/: buf.gen.yaml  buf.md  buf.yaml  kiosk.proto
proto/kiosk/: kiosk.proto
sql/: movie.sql
sql/migrations/: v0.sql
src/: card.cc  card.cpp  card.h  db.cc  db.h  helper.cc  helper.h  helper.hpp  kiosk_server.cc  main.cc  main.cpp  movie.h  movies.cpp  movies.h  payment.h  ticket.cpp  ticket.h
